dev: added button

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,6 +10,9 @@
   </head>
   <body>
     <h1>Liste des articles</h1>
+    <nav>
+      <button>Ajouter</button>
+    </nav>
     <table>
       <thead>
         <th>Nom</th>
