--- a/public/style.css
+++ b/public/style.css
@@ -24,3 +24,11 @@ table tbody tr:hover {
   cursor: pointer;
   background-color: #ddd;
 }
+
+button {
+  padding: 0.5em 1em;
+}
+
+nav {
+  margin-bottom: 1em;
+}
