--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -11,7 +11,9 @@
   <body>
     <h1>Liste des articles</h1>
     <nav>
-      <button>Ajouter</button>
+      <a href="/add">
+        <button>Ajouter</button>
+      </a>
     </nav>
     <table>
       <thead>
