--- a/views/pages/add.ejs
+++ b/views/pages/add.ejs
@@ -11,18 +11,18 @@
   </head>
   <body>
     <h1>Ajout d'un article</h1>
-    <form action="/action/add-article">
+    <form action="/action/add-article" method="POST">
       <label>
         <div>Nom</div>
-        <input type="text" />
+        <input type="text" value="Tournevis" name="name" />
       </label>
       <label>
         <div>Prix</div>
-        <input type="number" min="0" step="0.01" />
+        <input type="number" min="0" step="0.01" value="1.99" name="price" />
       </label>
       <label>
         <div>Quantité</div>
-        <input type="number" min="0" step="1" />
+        <input type="number" min="0" step="1" value="100" name="qty" />
       </label>
       <button>Ajouter</button>
     </form>
