dev: added suppress btn

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -11,9 +11,10 @@
   <body>
     <h1>Liste des articles</h1>
     <nav>
-      <a href="/add">
+      <a href="/add" class="button">
         <button>Ajouter</button>
       </a>
+      <button id="suppress-btn" hidden>Supprimer</button>
     </nav>
     <table>
       <thead>
