dev: added suppress btn

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -14,7 +14,7 @@
       <a href="/add" class="button">
         <button>Ajouter</button>
       </a>
-      <button id="suppress-btn" hidden>Supprimer</button>
+      <button id="suppress-btn" hidden onclick="remove()">Supprimer</button>
     </nav>
     <table>
       <thead>
